crates/bevy_reflect/compile_fail/tests/reflect_derive/from_reflect_fail.stderr
error: `from_reflect` already set to false
 --> tests/reflect_derive/from_reflect_fail.rs:6:26
  |
6 | #[reflect(from_reflect = true)]
  |                          ^^^^

error: `from_reflect` already set to true
  --> tests/reflect_derive/from_reflect_fail.rs:15:26
   |
15 | #[reflect(from_reflect = false)]
   |                          ^^^^^

error[E0119]: conflicting implementations of trait `FromReflect` for type `Baz`
  --> tests/reflect_derive/from_reflect_fail.rs:22:19
   |
22 | #[derive(Reflect, FromReflect)]
   |          -------  ^^^^^^^^^^^ conflicting implementation for `Baz`
   |          |
   |          first implementation here
   |
   = note: this error originates in the derive macro `FromReflect` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
